# hs-module-graph

./: README.md  hs-module-graph.cabal  stack.yaml
lib/Ide3/: ModuleGraph.hs
src/: Main.hs
