name: hs-module-graph
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2017 Author name here
maintainer: example@example.com
homepage: https://github.com/githubuser/hs-module-graph#readme
category: Web
author: Author name here
extra-source-files:
    README.md

library
    exposed-modules:
        Ide3.ModuleGraph
    build-depends:
        base -any,
        Ide3-base -any,
        Ide3-common -any,
        graphviz -any,
        mtl -any,
        transformers -any,
        text -any
    hs-source-dirs: lib

executable hs-module-graph
    main-is: Main.hs
    build-depends:
        base -any,
        hs-module-graph -any,
        Ide3-base -any,
        Ide3-stack -any,
        mtl -any,
        graphviz -any,
        text -any
    default-language: Haskell2010
    hs-source-dirs: src

